# micracode

./: .gitignore  README.md  chat.py  install.sh  main.py  multily.md  pyproject.toml
agent/: __init__.py  graph.py  nodes.py  state.py
apps/api/src/micracode_api/routers/: generate.py
apps/desktop/tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/desktop/tauri/capabilities/: default.json
apps/desktop/tauri/crates/core-orchestration/: Cargo.toml
apps/desktop/tauri/crates/core-orchestration/examples/: demo.rs
apps/desktop/tauri/crates/core-orchestration/src/: lib.rs  runtime.rs
apps/desktop/tauri/crates/core-orchestration/tests/: engine.rs
apps/desktop/tauri/crates/core-persistence/: Cargo.toml
apps/desktop/tauri/crates/core-persistence/src/: lib.rs
apps/desktop/tauri/crates/core-persistence/tests/: event_store.rs
apps/desktop/tauri/crates/core-projection/: Cargo.toml
apps/desktop/tauri/crates/core-projection/src/: lib.rs
apps/desktop/tauri/crates/core-projection/tests/: crash_recovery.rs
apps/desktop/tauri/crates/core-provider/: Cargo.toml
apps/desktop/tauri/crates/core-provider/src/: adapter.rs  claude_adapter.rs  driver.rs  event.rs  harness.rs  lib.rs
apps/desktop/tauri/crates/core-provider/tests/: claude_subprocess.rs  codex_subprocess.rs
apps/desktop/tauri/crates/core-terminal/: Cargo.toml
apps/desktop/tauri/crates/core-terminal/src/: lib.rs  preview.rs  terminal.rs
apps/desktop/tauri/crates/core-vcs/: Cargo.toml
apps/desktop/tauri/crates/core-vcs/src/: lib.rs
apps/desktop/tauri/icons/: icon.icns
apps/desktop/tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json
apps/web/src/app/: page.tsx
apps/web/src/components/chat/: V0ChatPanel.tsx
apps/web/src/components/editor/: EditorTopBar.tsx
apps/web/src/components/home/: CommandPrompt.tsx  RecentTasksSection.tsx
apps/web/src/components/layout/: TopNav.tsx  WorkspaceShell.tsx
apps/web/src/lib/api/: projects.ts  uiMessage.ts
component/: __init__.py  chat.py  connect_modal.py  diff_block.py  file_suggester.py  file_tag_input.py  header.py  interactive_diff_block.py  message.py  session_browser.py  session_item.py  session_list.py  status_bar.py  theme.py  tool_message.py
config/: __init__.py  session_store.py  store.py
desktop/api/: README.md
desktop/api/src/: decider.rs  provider.rs
desktop/api/src/routers/: mod.rs  sessions.rs  threads.rs
desktop/test-frontend/: README.md  index.html
desktop/test-frontend/mocks/: mock-claude.sh  mock-codex.sh
llm/: __init__.py  models.py
tools/: __init__.py  diff_utils.py  file_ops.py  git_utils.py  init_command.py  mention_utils.py  propose_edit.py  search.py
