[package]
name = "core-persistence"
version = "0.1.0"
edition = "2021"
description = "Append-only event store + projections (SQLite) for the Micracode Rust core."

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
ts-rs = { version = "10", features = ["serde-json-impl"] }

[dev-dependencies]
tempfile = "3"
