[package]
name = "core-projection"
version = "0.1.0"
edition = "2021"
description = "Event-sourced read-model projections (threads/turns/messages) for the Micracode Rust core."

[dependencies]
core-persistence = { path = "../core-persistence" }
core-provider = { path = "../core-provider" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-json-impl"] }

[dev-dependencies]
tempfile = "3"
