[package]
name = "core-provider"
version = "0.1.0"
edition = "2021"
description = "Provider driver (Codex CLI over stdio) + event normalization for the Micracode Rust core."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
tempfile = "3"
