[package]
name = "core-vcs"
version = "0.1.0"
edition = "2021"
description = "Local Git status + per-turn checkpoint capture/diff/revert for the Micracode Rust core (PRD FR6)."

[dependencies]
git2 = { version = "0.19", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
ts-rs = { version = "10" }

[dev-dependencies]
tempfile = "3"
